--- a/Hover/src/Components/Home.css
+++ b/Hover/src/Components/Home.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
-/* body{
-    background-color: #4A5764;
-} */
+body{
+    background-color: white
+}
 
 :root{
     --maincolor:#2ec8a6;
@@ -130,14 +130,17 @@ header{
 }
 
 .home-left-content span{
-    font-size: 2rem;
-    color: var(--maincolor);
+    font-size: 20px;
+    color: rgb(56, 71, 56);
+
+    /* color: var(--maincolor); */
     padding: 1rem 0;
     font-weight: bolder;
 }
 .home-left-content h2{
     font-size: 48px;
     margin: 1rem 0;
+    color: black;
     
 }
 .home-left-content p{
@@ -199,7 +202,8 @@ header{
     flex: 1 1 300px;
     padding: 3rem 3rem;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    background-image: url(images/backgroung-pattern-1.png);
+    color: black;
+    background-image: url(images/backgroung-pattern-1.png);  
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -267,6 +271,7 @@ header{
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    background-color: white;
     
 }
 .main-about .about-heading{
@@ -346,11 +351,14 @@ header{
     background-repeat: no-repeat;
 }
 .doctors-heading{
-    font-size: 30px;
+    font-size: 50px;
     text-align: center;
    margin: 4rem;
    color: var(--maincolor);
 }
+/* .doctors-heading h2{
+    font-size: 20px;
+} */
 .main-inner-doctor{
     display: flex;
     align-items: center;
@@ -448,6 +456,8 @@ header{
 .our-service{
     width: 100%;
     padding: 3rem 7%;
+    background-color: white;
+    color: black;
 }
 .service-heading h2{
     font-size: 40px;
@@ -517,7 +527,8 @@ header{
 .main-review{
     padding: 2.5rem 7%;
     width: 100%;
-    
+    background-color: white;
+    color: black;
 }
 
 
