--- a/Hover/src/Components/LoginPAge.css
+++ b/Hover/src/Components/LoginPAge.css
@@ -61,7 +61,7 @@
   }
   
   .title {
-    font-size: 2.2rem;
+    font-size: 30px;
     color: #444;
     margin-bottom: 10px;
   }
@@ -98,7 +98,7 @@
   }
   
   .input-field .LoginInput::placeholder {
-    color: #aaa;
+    color: #080808;
     font-weight: 500;
   }
   
@@ -145,6 +145,7 @@
     margin: 10px 0;
     cursor: pointer;
     transition: 0.5s;
+    
   }
   
   .btn:hover {
@@ -172,6 +173,7 @@
     transition: 1.8s ease-in-out;
     border-radius: 50%;
     z-index: 6;
+    
   }
   
   .image {
@@ -203,16 +205,18 @@
     color: #fff;
     transition: transform 0.9s ease-in-out;
     transition-delay: 0.6s;
+   
   }
   
   .panel .loginh3 {
     font-weight: 600;
     line-height: 1;
     font-size: 1.5rem;
+    font-size: 30px;
   }
   
   .panel .loginp {
-    font-size: 0.95rem;
+    font-size: 15px;
     padding: 0.7rem 0;
   }
   
@@ -223,7 +227,7 @@
     width: 130px;
     height: 41px;
     font-weight: 600;
-    font-size: 0.8rem;
+    font-size: 16px;
   }
   
   .right-panel .image,
