--- a/Hover/src/Components/Home.css
+++ b/Hover/src/Components/Home.css
@@ -310,7 +310,7 @@ header{
 .about-right-content h2{
     font-size: 30px;
     padding: 1.5rem 0;
-    color: black;
+    color: rgb(236, 197, 197);
     font-weight: bolder;
     line-height: 4rem;
 }
@@ -592,32 +592,102 @@ header{
     padding-bottom: 2rem;
     line-height: 2.5rem;
 }
-.main-footer{
-    padding: 4rem 7%;
-    background-color: var(--textcolor);
+
+
+
+/* ---------------------------------------------Footer-------------------------- */
+body{
+	line-height: 1.5;
+	font-family: 'Poppins', sans-serif;
 }
-.footer-inner{
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
+*{
+	margin:0;
+	padding:0;
+	box-sizing: border-box;
 }
-.footer-content{
-    flex: 1 1 200px;
-    text-align: center;
+.container{
+	max-width: 1170px;
+	margin:auto;
 }
-.footer-content h1{
-    color: white;
-    font-size: 25px;
+.row{
+	display: flex;
+	flex-wrap: wrap;
 }
-.link a{
-    display: block;
-    text-align: center;
-    color: white;
-    font-size: 1.5rem;
-    padding: 1rem;
-    margin: 0.5rem;
+ul{
+	list-style: none;
+}
+.footer{
+	background-color: #24262b;
+    padding: 0px 0;
+}
+.footer-col{
+   width: 25%;
+   padding: 0 15px;
+}
+.footer-col h4{
+	font-size: 18px;
+	color: #ffffff;
+	text-transform: capitalize;
+	margin-bottom: 35px;
+	font-weight: 500;
+	position: relative;
+}
+.footer-col h4::before{
+	content: '';
+	position: absolute;
+	left:0;
+	bottom: -10px;
+	background-color: #e91e63;
+	height: 2px;
+	box-sizing: border-box;
+	width: 50px;
+}
+.footer-col ul li:not(:last-child){
+	margin-bottom: 10px;
+}
+.footer-col ul li a{
+	font-size: 16px;
+	text-transform: capitalize;
+	color: #ffffff;
+	text-decoration: none;
+	font-weight: 300;
+	color: #bbbbbb;
+	display: block;
+	transition: all 0.3s ease;
+}
+.footer-col ul li a:hover{
+	color: #ffffff;
+	padding-left: 8px;
+}
+.footer-col .social-links a{
+	display: inline-block;
+	height: 40px;
+	width: 40px;
+	background-color: rgba(189, 38, 38, 0.2);
+	margin:0 10px 10px 0;
+	text-align: center;
+	line-height: 40px;
+	border-radius: 50%;
+	color: #ffffff;
+	transition: all 0.5s ease;
+}
+.footer-col .social-links a:hover{
+	color: #24262b;
+	background-color: #ffffff;
 }
 
+/*responsive*/
+@media(max-width: 767px){
+  .footer-col{
+    width: 50%;
+    margin-bottom: 30px;
+}
+}
+@media(max-width: 574px){
+  .footer-col{
+    width: 100%;
+}
+}
 
 
 
