--- a/Hover/src/Components/LoginPAge.css
+++ b/Hover/src/Components/LoginPAge.css
@@ -169,7 +169,7 @@
     top: -10%;
     right: 48%;
     transform: translateY(-50%);
-    background-image: linear-gradient(-45deg, #FF8C00 0%, #FFA500 100%);
+    background-image: linear-gradient(-45deg, #2EC8A6 0%, #9cbd3b 100%);
     transition: 1.8s ease-in-out;
     border-radius: 50%;
     z-index: 6;
@@ -177,7 +177,7 @@
   }
   
   .image {
-    width: 100%;
+    width: 50%;
     transition: transform 1.1s ease-in-out;
     transition-delay: 0.4s;
   }
